--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -55,7 +55,7 @@ li{list-style: none;}
 body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;font-size:13px;color: #333;letter-spacing:-0.045em !important;}
 .hidden{display:block;margin: 0;padding: 0;width: 0;height: 0;overflow: hidden;font-size: 0;line-height: 0;visibility: hidden;}
 
-#wrap{width: 100%; height: 100%;
+#wrap{width: 100%; height: 100%; min-width: 1920px;
   &.main{position: relative; transition: .5s; background-color: #4e4e4e;
     .logo a{display: block; width: 800px; height: 136px; transition: .5s ease-in-out;
     background: url("../images/common/main-logo-g.png")no-repeat center;
@@ -131,12 +131,29 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
 .utilArea{position: absolute; top: 22px; right: 30px;
   ul{display: flex;align-items: center;}
   li{position: relative;
+    .toolTip{opacity: 0; visibility: hidden; position: absolute; top: 42px; left: -14px; transition: .5s ease-in-out;
+      span{display: block; min-width: 60px; padding: 5px 0; box-sizing: border-box; color: #fff;
+      font-family: 'Noto Sans'; font-size: 11px; border-radius: 3px; text-align: center;
+      background-color: #333;}
+    }
     &:before{content: ''; opacity: 0; visibility: hidden; position: absolute; left: -5px; top: -5px; z-index: -1;
     width: 40px; height: 40px; border-radius: 50px; transition: .5s ease-in-out; background-color: rgba($color: #ddd, $alpha: 0.5);}
     button,a{display: block; width: 30px;height: 30px;
-      &.btnMail{background: url("../images/ico/ico-mail.png")no-repeat center;}
-      &.btnShare{background: url("../images/ico/ico-share-bk.png")no-repeat center;}
-      &.btnMore{background: url("../images/ico/ico-more.png")no-repeat center;}
+      &.btnMail{background: url("../images/ico/ico-mail.png")no-repeat center;
+        &:hover{
+          .toolTip.mail{opacity: 1; visibility: visible;}
+        }
+      }
+      &.btnShare{background: url("../images/ico/ico-share-bk.png")no-repeat center;
+        &:hover{
+          .toolTip.share{opacity: 1; visibility: visible;}
+        }
+      }
+      &.btnMore{background: url("../images/ico/ico-more.png")no-repeat center;
+        &:hover{
+          .toolTip.more{opacity: 1; visibility: visible;}
+        }
+      }
     }
     +li{margin-left: 30px;}
     &:hover{
@@ -159,4 +176,10 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
   
   /* 본문 텍스트 */
   .mainTxt{font-size: 16px; font-family: 'Noto Sans'; line-height: 1.5; color: #333;}
+}
+
+.table{
+  table{width: 100%;}
+  th,td{height: 30px; border: 1px solid #ddd; padding: 5px; box-sizing: border-box; font-family: 'Noto Sans';}
+  th{font-size: 14px; color: #333; background-color: #f5f5f5;}
 }
