--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -55,7 +55,24 @@ li{list-style: none;}
 body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;font-size:13px;color: #333;letter-spacing:-0.045em !important;}
 .hidden{display:block;margin: 0;padding: 0;width: 0;height: 0;overflow: hidden;font-size: 0;line-height: 0;visibility: hidden;}
 
-#wrap{width: 100%; height: 100%; min-width: 1920px;
+.block{display: block;}
+
+.overflow-y{overflow-y: auto;
+  &.maxH{max-height: 100px;}
+}
+.tScroll{display: block;}
+
+.cScroll{overflow-y:auto;overflow-x:hidden;scrollbar-width: thin;scrollbar-color:#303030 transparent;
+  
+  &::-webkit-scrollbar { width: 10px;height:10px; }   
+  &::-webkit-scrollbar-button { display: none; }   
+  &::-webkit-scrollbar-track { background-color:#e9e9e9; }  
+  &::-webkit-scrollbar-thumb { background: #ccc;border-radius:5px; } 
+  &::-webkit-scrollbar-thumb:hover { background: #b6b6b6; } 
+  &::-webkit-scrollbar-thumb:active { background: #808080; }   
+}
+
+#wrap{width: 100%; height: 100%; min-width: 1900px;
   &.main{position: relative; transition: .5s; background-color: #4e4e4e;
     .logo a{display: block; width: 800px; height: 136px; transition: .5s ease-in-out;
     background: url("../images/common/main-logo-g.png")no-repeat center;
@@ -83,9 +100,10 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
   }
 }
 
-#container{position: relative; display: flex; width: inherit; height: inherit;}
+#container{position: relative; display: flex;}
 
-.leftArea{width: 300px; height: 100%; border-right: 1px solid #ddd; overflow-y: auto; background-color: #f5f5f5;
+.leftArea{position: fixed; width: 300px; height: 100%; border-right: 1px solid #ddd; 
+overflow-y: auto; background-color: #f5f5f5; z-index: 1000;
   >.leftMenu{
     >li{position: relative; cursor: pointer;
       a{display: block;}
@@ -106,9 +124,13 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
       >a{display: block;}
       >ul.leftSubMenu{display: none; padding: 16px 28px 16px 28px; box-sizing: border-box;
       border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08); background-color: #eee;
+        &.block{display: block;}
         li{padding-bottom: 8px; border-bottom: 1px solid rgba($color: #000012, $alpha: 0.08);
           a{display: block; font-family: 'Noto Sans'; font-size: 18px; color: #707070;
             &:hover{text-decoration: underline;}
+          }
+          &.active{
+            a{color: #266bf7;}
           }
           +li{margin-top: 17px;}
         }
@@ -162,7 +184,18 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
   }
 }
 
-.rightArea{width: 1200px; margin: 0 auto; padding: 115px 0;
+.resultArea{border: 1px solid #ddd; border-radius: 4px;
+  .inner{padding: 15px; box-sizing: border-box;
+    .exBox{border: 1px solid #222; height: 150px;
+      .overflowDiv{width: 100%; height: 200px;}
+    }
+  }
+}
+
+.rightArea{position: absolute; right: 0; top: 0; left: 500px; width: 1200px; padding: 115px 0; z-index:950;
+  .highlightArea{max-height: 700px;
+    +.titleH2{margin-top: 20px;}
+  }
 
   .textBox{
     +.textBox{margin-top: 75px;}
@@ -182,4 +215,10 @@ body,html{font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Do
   table{width: 100%;}
   th,td{height: 30px; border: 1px solid #ddd; padding: 5px; box-sizing: border-box; font-family: 'Noto Sans';}
   th{font-size: 14px; color: #333; background-color: #f5f5f5;}
+}
+
+.flex{display: flex;
+  &.ac{align-items: center;}
+  &.jc{justify-content: center;}
+  &.sb{justify-content: space-between;}
 }
