--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -222,3 +222,38 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1000;
   &.jc{justify-content: center;}
   &.sb{justify-content: space-between;}
 }
+
+.popup{position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); z-index: 9999;
+  .head,.cont{color: #222; font-family: 'Noto Sans'; background-color: #fff;}
+  .head{font-size: 16px; border-bottom: 1px solid #ddd;
+    >.inner{padding: 10px; box-sizing: border-box;}
+  }
+  .cont{font-size: 13px;
+    >.inner{padding: 15px; box-sizing: border-box;}
+  }
+  &.share{width: 350px;
+    .cont{border-radius: 4px; text-align: center;
+    box-shadow: 0px 0px 8px rgba($color: #000000, $alpha: 0.35);
+      p+.inputArea{margin-top: 12px;}
+      .inputArea{
+        input{margin-right: 12px;}
+      }
+    }
+  }
+}
+
+#dimmed{position: fixed; z-index: 9998; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0,0.6);}
+
+input[type="text"]{height: 30px; border: 1px solid #ddd; border-radius: 4px; padding-left: 5px; box-sizing: border-box;
+background-color: #fff;
+  &.full{width: 100%;}
+}
+
+button{height: 30px; padding: 0 5px; box-sizing: border-box; border-radius: 2px;box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  &.w88{min-width: 88px;}
+  &.w75{min-width: 75px;}
+  &.bgBlue{background-color: #266bf7;}
+  span{
+    &.c-white{color: #fff;}
+  }
+}
