--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -9,14 +9,6 @@
 }
 
 @font-face {
-  font-family: 'Noto Sans DemLight';
-  font-style: normal;
-  font-weight: 400;
-  src: url(./font/notoSans/eot/NotoSansKR-DemiLight-Hestia.eot);
-  src: url(./font/notoSans/eot/NotoSansKR-DemiLight-Hestia.eot?#iefix) format("embedded-opentype"), url(./font/notoSans/woff/NotoSansKR-DemiLight-Hestia.woff) format("woff");
-}
-
-@font-face {
   font-family: 'Noto Sans';
   font-style: normal;
   font-weight: 400;
@@ -195,6 +187,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1000;
       .overflowDiv{width: 100%; height: 200px;}
     }
   }
+  +.btnArea{margin-top: 50px;}
 }
 
 .rightArea{position: absolute; right: 0; top: 0; left: 500px; width: 1200px; padding: 115px 0; z-index:950;
@@ -255,7 +248,8 @@ font-family: 'Noto Sans'; border-radius: 4px; background-color: #fff;
   &.full{width: 100%;}
 }
 
-.button{display: flex; align-items: center; height: 30px; padding: 0 5px; box-sizing: border-box; border-radius: 4px; font-family: 'Noto Sans';
+.button{display: flex; align-items: center; justify-content: center; height: 34px; line-height: 34px;
+padding: 0 5px; box-sizing: border-box; border-radius: 4px; font-family: 'Noto Sans';
 font-size: 14px; color: #fff;
   &.w75{min-width: 75px;}
   &.Bgblue{background-color: #266bf7;}
@@ -265,10 +259,10 @@ font-size: 14px; color: #fff;
 }
 
 i.ico{display: inline-block; background-repeat: repeat; background-position: center;
-  &.share{width: 30px;height: 30px; background-image: url("../images/ico/ico-share-hover.png");}
+  &.share{width: 33px;height: 33px; background-image: url("../images/ico/ico-share.png");}
 }
 
-.btnArea{display: flex;}
+.btnArea{position: relative; display: flex;}
 
 .mouseMenu{display:none; position:absolute; z-index:10000; padding:10px 0;border:1px solid #ccc;
 border-radius:4px; background:#f5f5f5;
