--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -211,6 +211,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1000;
   /* 본문 텍스트 */
   .mainTxt{font-size: 16px; font-family: 'Noto Sans'; line-height: 1.5; color: #333;
     +.highlightArea{margin-top: 15px;}
+    +.tabWrap{margin-top: 30px;}
   }
 }
 
@@ -326,6 +327,30 @@ border-radius:4px; background:#f5f5f5;
 
 #dimmed{display: none; position: fixed; z-index: 9998; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0,0.6);}
 
+
+.tabWrap{
+  .tabCont{display: none;
+    &.active{display: block;}
+  }
+  .tabNav .tabList{display: flex;}
+
+  &.type01{margin-bottom: 30px;
+    .tabNav{margin-bottom: 15px;
+      .tabList{border-bottom: 2px solid #ddd; border-radius: 4px; background-color: #fff;
+        li{position: relative; flex: 1; height: 35px; line-height: 35px;font-size: 18px;
+        cursor: pointer; text-align: center; color: #000; font-family: 'Noto Sans';
+          &.orange.active:before{background-color: #ed5e26;}
+          &.pink.active:before{background-color: #cf649a;}
+          &.blue.active:before{background-color: #2693cc;}
+          &.yellow.active:before{background-color: #f7e018;}
+          &.active{font-weight: bold;
+            &:before{content: ''; position: absolute; width: 100%; height: 3px; bottom: -1px; left: 0;}
+          }
+        }
+      }
+    }
+  }
+}
 
 /* supports */
 
