--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -311,6 +311,18 @@ font-size: 14px; color: #fff;
   }
 }
 
+.radio{display: inline-block; margin-right: 10px;margin-top: 0; cursor: pointer;
+  input[type="radio"]{display: none;}
+  &:last-child {margin-right: 0;}
+  label{position: relative; display:inline-block; font-family: "Noto Sans"; font-size: 14px; color: #141414; cursor: pointer;
+    &:before{content: ''; display: inline-block; width: 14px; height: 14px; border: 1px solid #ddd; border-radius: 50%; background-color: #fff;}
+  }
+  input[type="radio"]:checked+label{
+    &:after{content: ''; position: absolute; top: 5px; left: 5px; 
+    width: 6px;height: 6px; border-radius: 50%; background-color: #266bf7;}
+  }
+}
+
 i.ico{display: inline-block; background-repeat: repeat; background-position: center;
   &.share{width: 33px;height: 33px; background-image: url("../images/ico/ico-share-w.svg");}
 }
