--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -314,12 +314,20 @@ font-size: 14px; color: #fff;
 .radio{display: inline-block; margin-right: 10px;margin-top: 0; cursor: pointer;
   input[type="radio"]{display: none;}
   &:last-child {margin-right: 0;}
-  label{position: relative; display:inline-block; font-family: "Noto Sans"; font-size: 14px; color: #141414; cursor: pointer;
+  label{position: relative; display: flex;align-items: center; font-family: "Noto Sans"; font-size: 14px; color: #141414; cursor: pointer; text-indent: 5px;
     &:before{content: ''; display: inline-block; width: 14px; height: 14px; border: 1px solid #ddd; border-radius: 50%; background-color: #fff;}
   }
   input[type="radio"]:checked+label{
-    &:after{content: ''; position: absolute; top: 5px; left: 5px; 
+    &:after{content: ''; position: absolute; top: 50%; transform: translateY(-50%); left: 5px; 
     width: 6px;height: 6px; border-radius: 50%; background-color: #266bf7;}
+  }
+  &.imgType{
+    input[type="radio"]:checked+label{
+      &:after{content: ''; border: 0; width: 16px; height: 16px; left: 0;
+      background-image: url("../images/ico/ico-radio-checked.svg");
+      background-repeat: no-repeat ; background-position: center; background-size: 16px 16px;
+      }
+    }
   }
 }
 
