--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -116,6 +116,19 @@ $c-white: #fff;
       .titleH3{margin-bottom: 0; padding-bottom: 10px;}
       .centerBox{padding: 50px; border: 2px solid #000; font-size: 22px; font-family: 'Noto Sans';}
     }
+
+    &.bgImage{
+      .resultCont{position: relative;
+        .imgDiv{height: 600px; background-image: url("../images/common/1903x600.png"); background-repeat: no-repeat;}
+        &.type01{
+          .imgDiv{background-size: cover;}
+        }
+        &.type02{
+          .imgDiv{background-size: 100% 100%;}
+        }
+        +.resultCont{margin-top: 50px;}
+      }
+    }
   }
 }
 
@@ -213,7 +226,8 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1000;
   +.btnArea{margin-top: 50px;}
 }
 
-.rightArea{position: absolute; right: 0; top: 0; left: 500px; width: 1200px; padding: 115px 0; z-index:950;
+.rightArea{position: absolute; right: 0; top: 0; /*left: 500px;*/ left: calc(50% - 402px);
+width: 1200px; padding: 115px 0; z-index:950;
   .highlightArea{max-height: 700px;
     +.titleH2{margin-top: 20px;}
   }
