--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -129,6 +129,19 @@ $c-white: #fff;
         +.resultCont{margin-top: 50px;}
       }
     }
+
+    &.footerBasic{
+      .contents{width: 100%;}
+      .contBox{position: relative; height: 800px; text-align: center; font-size: 36px; color: #fff; font-family: 'Noto Sans';
+      background-color: #444;
+        span{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
+      }
+      #footer{width: 100%; height: 100px; background-color: #292a2d;
+        .inner{display: flex; max-width: 1200px; margin: 0 auto;
+          
+        }
+      }
+    }
   }
 }
 
