--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -199,7 +199,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1000;
   &.none{display: none;}
 }
 
-.utilArea{position: absolute; top: 22px; right: 30px;
+.utilArea{position: absolute; top: 22px; right: 30px; z-index: 1000;
   ul{display: flex;align-items: center;}
   li{position: relative;
     .toolTip{opacity: 0; visibility: hidden; position: absolute; top: 42px; left: -14px; transition: .5s ease-in-out; z-index: 100;
