--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -132,7 +132,6 @@ $c-white: #fff;
   }
 
   &.update{
-    li{list-style: inside !important;}
     #contents{padding: 50px 0; min-width: 1200px; margin: 0 auto;}
     .mainTxt{
       ul{
@@ -145,6 +144,7 @@ $c-white: #fff;
     .textBox{
       .titleH3+.mainTxt p{font-size: 14px;}
       +.textBox{margin-top: 75px;}
+      +.table{margin-top: 40px;}
     }
   }
 
@@ -303,14 +303,16 @@ width: 1200px; padding: 115px 0; z-index:950;
   th{font-size: 14px; color: #333; background-color: #f5f5f5;}
 
   &.noticeBoard{border-top: 7px solid #222;
-    th,td{border: 1px solid #5f5f5f; font-family: 'Noto Sans';
-      &:last-child{border-right: 0;}
-      &:first-child{border-left: 0;}
+    th,td{border: 1px solid #5f5f5f; font-family: 'Noto Sans'; text-align: center;}
+    th{height: 65px; border-left: 0; border-right: 0; font-size: 18px; color: #3b3b3b; background-color: #ddd;}
+    td{height: 40px; border-left: 0; border-right: 0; font-size: 16px; padding: 15px 25px 15px 25px; box-sizing: border-box; background-color: rgba($color: #f3f4f5, $alpha: 0.8);
+      &:hover:not(:first-child){text-decoration: underline;}
     }
-    th{height: 65px; font-size: 18px; color: #3b3b3b; background-color: #ddd;}
-    td{height: 40px; font-size: 16px; padding: 15px 25px 15px 25px; box-sizing: border-box; background-color: rgba($color: #f3f4f5, $alpha: 0.8);}
+    .tgShowHideRow{cursor: pointer;}
     .tgContRow{display: none;
+      li{list-style: inside !important;}
       .showHideBox{display: none;}
+      .mainTxt{text-align: left;}
     }
   }
 }
