--- a/pre-build/scss/header.css
+++ b/pre-build/scss/header.css
@@ -35,7 +35,7 @@
 
 #wrap.pre.headerFixed .contents, #wrap.pre.headerScroll .contents {
   position: absolute;
-  top: 65px;
+  top: 0;
   width: 100%;
   height: 2000px;
   display: -webkit-box;
@@ -57,7 +57,9 @@
 }
 
 #wrap.pre.headerScroll #header {
-  position: static;
+  top: 0;
+  -webkit-transition: .2s ease;
+  transition: .2s ease;
 }
 
 #wrap.pre.headerScroll #header.headFixed {
@@ -69,6 +71,6 @@
 }
 
 #wrap.pre.headerScroll #header.headDown {
-  top: 65px;
+  top: 0;
 }
 /*# sourceMappingURL=header.css.map */
