--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -144,7 +144,6 @@ $c-white: #fff;
     .textBox{
       .titleH3+.mainTxt p{font-size: 14px;}
       +.textBox{margin-top: 75px;}
-      +.table{margin-top: 40px;}
     }
   }
 
@@ -303,16 +302,14 @@ width: 1200px; padding: 115px 0; z-index:950;
   th{font-size: 14px; color: #333; background-color: #f5f5f5;}
 
   &.noticeBoard{border-top: 7px solid #222;
-    th,td{border: 1px solid #5f5f5f; font-family: 'Noto Sans'; text-align: center;}
-    th{height: 65px; border-left: 0; border-right: 0; font-size: 18px; color: #3b3b3b; background-color: #ddd;}
-    td{height: 40px; border-left: 0; border-right: 0; font-size: 16px; padding: 15px 25px 15px 25px; box-sizing: border-box; background-color: rgba($color: #f3f4f5, $alpha: 0.8);
-      &:hover:not(:first-child){text-decoration: underline;}
+    th,td{border: 1px solid #5f5f5f; font-family: 'Noto Sans';
+      &:last-child{border-right: 0;}
+      &:first-child{border-left: 0;}
     }
-    .tgShowHideRow{cursor: pointer;}
+    th{height: 65px; font-size: 18px; color: #3b3b3b; background-color: #ddd;}
+    td{height: 40px; font-size: 16px; padding: 15px 25px 15px 25px; box-sizing: border-box; background-color: rgba($color: #f3f4f5, $alpha: 0.8);}
     .tgContRow{display: none;
-      li{list-style: inside !important;}
       .showHideBox{display: none;}
-      .mainTxt{text-align: left;}
     }
   }
 }
@@ -519,6 +516,74 @@ border-radius:4px; background:#f5f5f5;
       &.jsStyle{
         span{color: #000 !important; background-color: #f7e018 !important;}
       }
+    }
+  }
+}
+
+.boardList{margin-top: 40px;
+  ul{padding: 0;
+    li{padding: 0; list-style: none; font-family: 'Noto Sans';}
+  }
+  .head{color: #3b3b3b; font-size: 18px; background: #ddd;
+    >ul{display: flex; border-top: 7px solid #222; border-bottom: 1px solid #5f5f5f; 
+      >li{display: inherit; justify-content: center;
+        >span{line-height: 65px;}
+        &:first-child{width: 12%;}
+        &:last-child{flex: 1;}
+      }
+    }
+  }
+
+  .cont{border-bottom: 1px solid #5f5f5f; background: rgba($color: #f3f4f5, $alpha: 0.8);
+    .li{border-top: 1px solid #5f5f5f; font-size: 16px; padding: 10px 0; box-sizing: border-box; cursor: pointer;
+      .boardBox{display: flex;
+        .boardItem{display: inherit; justify-content: center;
+          &:first-child{width: 12%;}
+          &:last-child{flex: 1;
+            &.underLine:hover{text-decoration: underline;}
+          }
+        }
+      }
+      &:first-child{border-top: 0;}
+    }
+    .listShowHideBox{display: none; padding: 0 30px; box-sizing: border-box; border-top: 1px solid #5f5f5f; background: rgba($color: #f3f4f5, $alpha: 0.8);
+      .inner{padding: 20px 0;
+        .tit{padding-bottom: 15px; border-bottom: 1px solid #ddd;
+          p{font-size: 18px; color: #000; font-family: 'Noto Sans';}
+          +.descList{margin-top: 20px;}
+        }
+        .descList{display: flex; flex-direction: column;
+          >li{list-style: inside; font-size: 14px; color: #333;}
+        }
+      }
+    }
+  }
+}
+
+.pager{display: flex; justify-content: center; align-items: center; margin-top: 60px;
+  div:not(.pageNumbers){display: flex; justify-content: center; width: 30px; height: 30px;
+  box-sizing: border-box; border: 1px solid #ddd; border-radius: 4px; cursor: pointer; font-size: 16px;
+  transition: 0.35s ease-in-out;
+    &:hover{border-color: #000;}
+  }
+  .firstPage{background: url("../images/ico/ico-pagi-first.png")no-repeat center;
+    &:hover{background: url("../images/ico/ico-pagi-first-hover.png")no-repeat center;}
+  }
+  .previousPage{margin-left: 5px; background: url("../images/ico/ico-pagi-prev.png")no-repeat center;
+    &:hover{background: url("../images/ico/ico-pagi-prev-hover.png")no-repeat center;}
+  }
+  .nextPage{margin-right: 5px; background: url("../images/ico/ico-pagi-next.png")no-repeat center;
+    &:hover{background: url("../images/ico/ico-pagi-next-hover.png")no-repeat center;}
+  }
+  .lastPage{background: url("../images/ico/ico-pagi-last.png")no-repeat center;
+    &:hover{background: url("../images/ico/ico-pagi-last-hover.png")no-repeat center;}
+  }
+  .pageNumbers{margin: 0 50px;
+    >a{display: inline-block; width: 32px; height: 32px; line-height: 32px; text-align: center; font-size: 16px;
+    border: 1px solid #ddd; border-radius: 4px; font-family: 'Noto Sans'; color: rgba($color: #222, $alpha: 0.5);
+    transition: 0.35s ease-in-out;
+      +a{margin-left: 5px;}
+      &.active,&:hover{border-color: #000; color: rgba($color: #000, $alpha: 1.0)}
     }
   }
 }
