--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -550,10 +550,11 @@ border-radius:4px; background:#f5f5f5;
       .inner{padding: 20px 0;
         .tit{padding-bottom: 15px; border-bottom: 1px solid #ddd;
           p{font-size: 18px; color: #000; font-family: 'Noto Sans';}
-          +.descList{margin-top: 20px;}
+          +dd{margin-top: 20px;}
         }
-        .descList{display: flex; flex-direction: column;
-          >li{list-style: inside; font-size: 14px; color: #333;}
+        dd{font-size: 14px; color: #333; font-family: 'Noto Sans';
+          &:before{content: ''; display: inline-block; width: 6px; height: 6px; border-radius: 50%; vertical-align: middle;
+          margin: -4px 10px 0 0; background-color: #000;}
         }
       }
     }
@@ -564,19 +565,23 @@ border-radius:4px; background:#f5f5f5;
   div:not(.pageNumbers){display: flex; justify-content: center; width: 30px; height: 30px;
   box-sizing: border-box; border: 1px solid #ddd; border-radius: 4px; cursor: pointer; font-size: 16px;
   transition: 0.35s ease-in-out;
-    &:hover{border-color: #000;}
+    &:hover:not(.disabled){border-color: #000;}
+  }
+
+  .firstPage,.previousPage,.nextPage,.lastPage{
+    &.disabled{cursor: default; background-color: rgba($color: #ccc, $alpha: 0.5);}
   }
   .firstPage{background: url("../images/ico/ico-pagi-first.png")no-repeat center;
-    &:hover{background: url("../images/ico/ico-pagi-first-hover.png")no-repeat center;}
+    &:hover:not(.disabled){background: url("../images/ico/ico-pagi-first-hover.png")no-repeat center;}
   }
   .previousPage{margin-left: 5px; background: url("../images/ico/ico-pagi-prev.png")no-repeat center;
-    &:hover{background: url("../images/ico/ico-pagi-prev-hover.png")no-repeat center;}
+    &:hover:not(.disabled){background: url("../images/ico/ico-pagi-prev-hover.png")no-repeat center;}
   }
   .nextPage{margin-right: 5px; background: url("../images/ico/ico-pagi-next.png")no-repeat center;
-    &:hover{background: url("../images/ico/ico-pagi-next-hover.png")no-repeat center;}
+    &:hover:not(.disabled){background: url("../images/ico/ico-pagi-next-hover.png")no-repeat center;}
   }
   .lastPage{background: url("../images/ico/ico-pagi-last.png")no-repeat center;
-    &:hover{background: url("../images/ico/ico-pagi-last-hover.png")no-repeat center;}
+    &:hover:not(.disabled){background: url("../images/ico/ico-pagi-last-hover.png")no-repeat center;}
   }
   .pageNumbers{margin: 0 50px;
     >a{display: inline-block; width: 32px; height: 32px; line-height: 32px; text-align: center; font-size: 16px;
