add: toast , 결과 프레임창 추가

--- a/pre-build/scss/gnb.scss
+++ b/pre-build/scss/gnb.scss
@@ -1,4 +1,4 @@
-#wrap.pre{
+.wrap.pre{
     &.gnbHover,&.gnb-li-hover,&.gnbFind{
         .container{width: 1200px; margin: 0 auto; padding-top: 60px;}
         #gnb{width: 100%;
