--- a/pre-build/scss/component.scss
+++ b/pre-build/scss/component.scss
@@ -608,6 +608,22 @@ border-radius:4px; background:#f5f5f5;
   }
 }
 
+// result페이지
+#frameBody{display: none; position: absolute; width: 100%; height: 100%; background-color: #fff; z-index: 10000;
+  .btnArea{position: fixed; top: 0; right: 0; z-index: 9999;
+    .frameClose{width: 24px; height: 24px; padding: 18px; box-sizing: border-box;
+    border-radius: 0 0 0 5px; background-size: 24px 24px; background-image: url("../images/ico/ico-result-close.png");
+    background-repeat: no-repeat; background-position: center center; background-color: #fff;}
+  }
+  &.fixed{position: fixed;}
+}
+
+#toast{display: none; position: absolute; top: 120px; left: 50%; transform: translateX(-50%); 
+width: 290px; padding: 12px; box-sizing: border-box; border-radius: 4px; z-index: 9999;
+background-color: rgba($color: #000, $alpha: 0.65);
+  span{display: inline-block; text-align: center; font-size: 14px; color: #fff; font-family: '맑은 고딕';}
+}
+
 /* import */
 @import 'header.scss';
 @import 'gnb.scss';
